crates/swc_ecma_parser/tests/test262-error-references/fail/346316bef54d805a.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/346316bef54d805a.js:1:5
  |
1 | ([a,...b,])=>0;
  |     ^^^^

